2008-08-26  Daiki Ueno  <ueno@unixuser.org>

	* epa.el (epa--key-widget-action): Save the selected window to
	make `widget-button-click-moves-point' work.  (Bug#733).

2008-08-26  Glenn Morris  <rgm@gnu.org>

	* progmodes/gud.el (tramp-file-name-localname)
	(tramp-dissect-file-name): Declare.

	* term/pc-win.el (msdos-setup-keyboard): Fix declaration.

2008-08-25  Eli Zaretskii  <eliz@gnu.org>

	* bindings.el (mode-line-frame-control): New function, caters to
	`pc' ``window system''.
	(mode-line-frame-identification): Use it instead of accessing
	window-system directly.

2008-08-25  Juri Linkov  <juri@jurta.org>

	* textmodes/text-mode.el (text-mode-map): Unbind "\es" from
	`center-line' and "\eS" from `center-paragraph'.
	(facemenu-keymap): Bind "\es" to `center-line' and "\eS" to
	`center-paragraph'.

2008-08-25  Ulf Jasper  <ulf@web.de>

	* net/newst-treeview.el (newsticker-treeview-own-frame): Doc
	fixed.
	(newsticker-treeview-treewindow-width): New.
	(newsticker-treeview-listwindow-height): New.
	(newsticker-treeview-browse-url-item): New.
	(newsticker-treeview-mode-map): Added
	newsticker-treeview-browse-url-item.
	(newsticker--treeview-window-init): Use
	newsticker-treeview-treewindow-width and
	newsticker-treeview-listwindow-height.

	* net/newst-reader.el (newsticker-browse-url-item): New.

2008-08-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dir.el (vc-dir-marked-only-files-and-states):
	(vc-dir-child-files-and-states): Reverse the list before returning it.

2008-08-24  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-introspect): Use `dbus-call-method-non-blocking'.

2008-08-24  Romain Francoise  <romain@orebokech.com>

	* progmodes/python.el (run-python): Remove '' from sys.path.

2008-08-23  Glenn Morris  <rgm@gnu.org>

	* progmodes/fortran.el (fortran-tab-mode-string)
	(fortran-comment-line-start, fortran-continuation-string): Doc fixes.

2008-08-23  Eli Zaretskii  <eliz@gnu.org>
